--- a/css/home.css
+++ b/css/home.css
@@ -42,6 +42,8 @@ header img{
 #intro .jumbotron{
     height:85vh;
     background-color: #EEA1C3;
+    margin-bottom: 0px;
+    border-radius: 0;
 }
 #intro h1{
     font-size: 90px;
