--- a/css/home.css
+++ b/css/home.css
@@ -1,14 +1,16 @@
 @media only screen and (max-width: 980px){
 
-    #intro h1{
-        font-size: 40px;
-        font-weight: 400;
-        line-height: 1.5;
+    #intro .jumbotron img{
+        margin-right: 15px;
     }
-    #intro img{
-        width: 30%;
-        float: left;
-        margin-right: 0px;
+    #intro .jumbotron h1{
+        font-size:40px;
+    }
+    #intro .jumbotron h3{
+        font-size: 20px;
+    }
+    #intro .jumbotron p{
+        font-size: 12px;
     }
     #second h5{
         margin-bottom: 63px;
