--- a/css/home.css
+++ b/css/home.css
@@ -1,8 +1,9 @@
 @media only screen and (max-width: 980px){
 
     #intro .jumbotron img{
-        margin-right: 15px;
-        width:40%;
+        width:50%;
+        margin-right: 0px;
+        margin-top:43px;
     }
     #intro .jumbotron h1{
         font-size:40px;
@@ -45,7 +46,7 @@ header img{
 }
 
 #intro .jumbotron{
-    height:85vh;
+    height:70vh;
     background-color: #EEA1C3;
     margin-bottom: 0px;
     border-radius: 0;
@@ -59,7 +60,7 @@ header img{
     width: 30%;
     float: left;
     margin-right: 150px;
-    padding-top: 63px;
+    padding-top: 0px;
 }
 #intro .container{
     position: relative;
